# vvtr-mcp-py

./: pyproject.toml  vvtr.py  weather.py
cal_data/: vvtr_data.py
src/vvtr_mcp_server/: main.py
src/vvtr_mcp_server/cal_data/: vvtr_data.py
src/vvtr_mcp_server/start_up/: __init__.py
src/vvtr_mcp_server/util/: __init__.py  csv_merger.py
util/: csv_merger.py  folder_size.py
vvtr_mcp_server/: __init__.py  main.py
vvtr_mcp_server/cal_data/: __init__.py  vvtr_data.py
vvtr_mcp_server/main_station/: __init__.py  main_station_data.py
vvtr_mcp_server/start_up/: initialize_folders.py
vvtr_mcp_server/util/: csv_merger.py  folder_size.py
