[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vvtr-mcp-server"
version = "0.1.0"
description = "Vvtr MCP服务器"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.0",
]

[project.scripts]
vvtr-mcp-server = "vvtr_mcp_server.main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["vvtr_mcp_server"]

[tool.hatch.build]
include = ["vvtr_mcp_server/**"]